INCLUDES =  -I. -I..
AM_CFLAGS = @CFLAGS@ @WARN_CFLAGS@ 

noinst_LTLIBRARIES = libJudyMalloc.la

libJudyMalloc_la_SOURCES = JudyMalloc.c

EXTRA_DIST = JudyByCount.c JudyCreateBranch.c JudyFirst.c JudyIns.c JudyMallocIF.c JudyPrevNext.c \
            JudyPrivate.h JudyTables.c JudyCascade.c JudyDecascade.c JudyFreeArray.c JudyInsArray.c \
            JudyMemActive.c JudyPrevNextEmpty.c JudyPrivate1L.h README JudyCount.c JudyDel.c JudyGet.c \
            JudyInsertBranch.c JudyMemUsed.c JudyPrintJP.c JudyPrivateBranch.h
